--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "node_repit",
   "version": "1.0.0",
+  "scripts": {
+    "start:dev": "set MODE=dev&& nodemon .",
+    "start:prod": "set MODE=prod&& node ."
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "nodemon": "^2.0.18",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
