--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "scripts": {
     "start:dev": "set MODE=dev&& nodemon .",
-    "start:prod": "set MODE=prod&& node ."
+    "start:prod": "set MODE=prod&& nodemon ."
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
-    "nodemon": "^2.0.18",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "nodemailer": "^6.7.7",
+    "nodemailer-express-handlebars": "^5.0.0",
+    "nodemon": "^2.0.18"
   }
 }
