--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "mongoose": "^6.4.0",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.18"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.4"
   }
 }
