--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^6.4.0",
     "nodemailer": "^6.7.7",
     "nodemailer-express-handlebars": "^5.0.0",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "twilio": "^3.78.0"
   }
 }
