--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "start:prod": "set MODE=prod&& node ."
   },
   "dependencies": {
+    "aws-sdk": "^2.1175.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "nodemailer": "^6.7.7",
     "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.18",
-    "twilio": "^3.78.0"
+    "twilio": "^3.78.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.4",
+    "@types/express-fileupload": "^1.2.2"
   }
 }
