--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "dependencies": {
     "aws-sdk": "^2.1175.0",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
+    "node-cron": "^3.0.1",
     "nodemailer": "^6.7.7",
     "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.18",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.4",
-    "@types/express-fileupload": "^1.2.2"
+    "@types/express-fileupload": "^1.2.2",
+    "morgan": "^1.10.0"
   }
 }
